# ot-asset-discovery

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 2024_01_01_0000-001_initial_schema.py
app/: __init__.py  discovery_engine.py  event_bus.py
app/api/: __init__.py  auth.py  auth_router.py  dependencies.py  devices_router.py  rate_limiter.py  router_alerts.py  router_auth.py  router_export.py  router_scans.py  router_topology.py  websocket_manager.py  ws_alerts.py
app/capture/: __init__.py  prober.py  sniffer.py
app/db/: __init__.py  device_repository.py  session.py
app/detection/: __init__.py  change_detector.py
app/export/: __init__.py  service.py
app/models/: __init__.py  database.py  domain.py
app/parsers/: __init__.py  dnp3.py  ethernetip.py  modbus.py  s7comm.py  serialization.py
app/scheduling/: __init__.py  scheduler.py
app/scoring/: __init__.py  risk_scorer.py
app/topology/: __init__.py  mapper.py
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  config.ts  index.css
tests/: __init__.py  conftest.py
tests/unit/: test_active_prober.py  test_alerts_api.py  test_alerts_integration.py  test_auth.py  test_auth_middleware.py  test_change_detector.py  test_device_repository.py  test_devices_router.py  test_discovery_engine.py  test_dnp3_parser.py  test_ethernetip_parser.py  test_event_bus.py  test_export_router.py  test_export_service.py  test_modbus_parser.py  (+10 more)
(+14 files in other folders)
